# snap-openstack-hypervisor

./: README.md  pyproject.toml
.github/workflows/: TiCS.yml
openstack_hypervisor/: hooks.py
openstack_hypervisor/cli/: common.py  schemas.py
templates/: nova.conf.j2
tests/unit/: conftest.py  test_hooks.py  test_templates.py
