# Copyright 2022 Canonical Ltd.
# See LICENSE file for licensing details.

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
    "pbr>=2.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "openstack-hypervisor"
version = "2025.1"
requires-python = "~=3.12.0"
license-files = ["LICENSE"]
description = "Hypervisor component of OpenStack"
readme = "README.md"
authors = [{ name = "Canonical", email = "openstack-charmers@lists.launchpad.net" }]
classifiers = [
    "Environment :: OpenStack",
    "Environment :: Web Environment",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operation System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "snap-helpers @ git+https://github.com/albertodonato/snap-helpers@46803aa9d52cc0bb24f76df878dd1010fc08e6a0",
    "jinja2",
    "netifaces",
    "pydantic>=2.11.0,<2.12.0", # incompatibility with typing-extensions 4.14.0, while distro is 4.10.0
    "cryptography>=38.0.0,<42,!=40.0.0,!=40.0.1",  # PyOpenSSL requirements
    "pyroute2==0.7.11",  # matched to caracal cloud-archive
    "click",
    "prettytable",
    "psutil",
]

[project.optional-dependencies]
dev= [
    "coverage[toml]",
    "pyroute2",
    "pytest",
    "pytest-mock",
    "python-novaclient",
]

tics= [
    "python-novaclient",
    "libvirt-python",
    "pylint",
    "flake8",
]

[project.urls]
"Homepage" = "https://github.com/canonical/openstack-hypervisor"
"Bug Reports" = "https://github.com/canonical/openstack-hypervisor/issues"

[project.scripts]
nova-compute-service = "openstack_hypervisor.services:nova_compute"
nova-api-metadata-service = "openstack_hypervisor.services:nova_api_metadata"
ovsdb-server-service = "openstack_hypervisor.services:ovsdb_server"
neutron-ovn-metadata-agent-service = "openstack_hypervisor.services:neutron_ovn_metadata_agent"
neutron-sriov-nic-agent-service = "openstack_hypervisor.services:neutron_sriov_nic_agent"
ceilometer-compute-agent-service = "openstack_hypervisor.services:ceilometer_compute_agent"
ovs-exporter-service = "openstack_hypervisor.services:ovs_exporter"
masakari-instancemonitor-service = "openstack_hypervisor.services:masakari_instancemonitor"
file-transfer-service = "openstack_hypervisor.services:file_transfer"
hypervisor = "openstack_hypervisor.cli.main:main"

[project.entry-points.'snaphelpers.hooks']
configure = "openstack_hypervisor.hooks:configure"
install = "openstack_hypervisor.hooks:install"

[tool.setuptools.packages.find]
include = ["openstack_hypervisor*"]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"

# Formatting tools configuration
[tool.black]
line-length = 99
target-version = ["py38"]

[tool.isort]
profile = "black"

# Linting tools configuration
[tool.flake8]
max-line-length = 99
max-doc-length = 99
max-complexity = 10
exclude = [".git", "__pycache__", ".tox", "build", "dist", "*.egg_info", "venv", ".venv"]
select = ["E", "W", "F", "C", "N", "R", "D", "H"]
# Ignore W503, E501 because using black creates errors with this
# Ignore D107 Missing docstring in __init__
ignore = ["W503", "E501", "D107"]
# D100, D101, D102, D103: Ignore missing docstrings in tests
per-file-ignores = [
    "tests/*:D100,D101,D102,D103,D104",
    "setup.py:D100",
    "openstack_hypervisor/*:D100",
    "openstack_hypervisor/__init__.py:D104,C801"
]
docstring-convention = "google"
# Check for properly formatted copyright header in each file
copyright-check = "True"
copyright-author = "Canonical Ltd."
copyright-regexp = "(?i)# SPDX-FileCopyrightText:\\s\\d{4}(-(\\d{4}|present))*"
#copyright-regexp = "Copyright\\s\\d{4}([-,]\\d{4})*\\s+%(author)s"
